--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,6 +81,7 @@
 
 html,
 body {
+  min-height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
 }
@@ -99,3 +100,8 @@ a {
     color-scheme: dark;
   }
 }
+
+main {
+  min-height: 100vh;
+}
+
