--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -9,16 +9,43 @@
   color: rgb(0, 0, 0);
   box-shadow: 0px 2px 7px rgb(0, 0, 0, 0.2);
   font-size: 1.1rem;
+  font-weight: 500;
+}
+
+.logo {
+  color: red;
+}
+
+.details {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
   ul {
     list-style-type: none;
-    width: 10%;
+    width: 80%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
 }
 
-.logo {
-  color: red;
+.profile {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  ul {
+    list-style-type: none;
+    width: 20%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
