--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,9 +1,56 @@
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500&display=swap');
+
 .footer {
   background-color: black;
   color: white;
   width: 100%;
-  height: 200px;
+  min-height: 200px;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
+  padding: 0 30px 0 30px;
+  align-items: center;
+  font-family: 'Catamaran';
+  font-size: 15px;
+
+  img {
+    width: 3rem;
+  }
+
+  div {
+    margin-bottom: 15px;
+  }
+}
+
+.links {
+  div {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 200px;
+  }
+
+  span {
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 600px) {
+  .footer {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .info {
+    div {
+      display: flex;
+      justify-content: center;
+    }
+  }
+  .links {
+    width:initial;
+
+    div {
+      flex-direction: column;
+    }
+  }
 }
