--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -2,7 +2,7 @@
   background-color: rgb(255, 255, 255);
   display: flex;
   height: 60px;
-  width: 100vw;
+  width: 100%;
   justify-content: space-between;
   padding: 0 30px 0 30px;
   align-items: center;
@@ -13,7 +13,9 @@
 }
 
 .logo {
-  color: red;
+  img {
+    width: 3rem;
+  }
 }
 
 .details {
