--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500&display=swap');
+
 .header {
   background-color: rgb(255, 255, 255);
   display: flex;
@@ -10,6 +12,7 @@
   box-shadow: 0px 2px 7px rgb(0, 0, 0, 0.2);
   font-size: 1.1rem;
   font-weight: 500;
+  font-family: 'Catamaran';
 }
 
 .logo {
