--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -13,6 +13,12 @@
   font-size: 1.1rem;
   font-weight: 500;
   font-family: 'Catamaran';
+  transition: all 0.5s;
+
+  &.dark {
+    background-color: rgb(44, 41, 64);
+    color: rgb(255, 255, 255);
+  }
 }
 
 .logo {
@@ -35,6 +41,48 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    button {
+      height: 15px;
+      width: 30px;
+      border-radius: 10px;
+      border: 0;
+      background-color: rgb(62, 62, 62);
+      cursor: pointer;
+      position: relative;
+      transition: all 0.5s;
+
+      &::before {
+        content: '';
+        position: absolute;
+        bottom: 18%;
+        left: 2px;
+        background-color: rgb(255, 255, 255);
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        transition: all 0.5s;
+      }
+
+      &.dark {
+        background-color: rgb(255, 255, 255);
+        &::before {
+          content: '';
+          position: absolute;
+          bottom: 18%;
+          left: 18px;
+          background-color: rgb(0, 0, 0);
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+        }
+      }
+    }
+
+    li {
+      display: flex;
+      align-items: center;
+    }
   }
 }
 
