--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -4,6 +4,10 @@
 }
 
 .content {
-  min-height: calc(100vh -  60px - 200px);
+  min-height: calc(100vh - 60px - 200px);
   width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
