--- a/components/Information/Information.module.scss
+++ b/components/Information/Information.module.scss
@@ -1,4 +1,21 @@
 .info {
-  background-color: bisque;
+  border: 1px solid black;
   display: grid;
+  width: 70%;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr 2fr;
+  min-height: calc(100vh - 60px - 200px - 20vh);
+  margin: 150px 0 150px 0;
+  div {
+    border: 1px solid black;
+  }
+}
+
+.side {
+  grid-row: 1/3;
+}
+
+.personal {
+  display: flex;
+  justify-content: space-around;
 }
