--- a/components/Information/Information.module.scss
+++ b/components/Information/Information.module.scss
@@ -13,6 +13,23 @@
 
 .side {
   grid-row: 1/3;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  section {
+    border: 1px solid red;
+    background-color: red;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: -50px;
+  }
+  img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+  }
 }
 
 .personal {
