--- a/components/Information/Information.module.scss
+++ b/components/Information/Information.module.scss
@@ -16,22 +16,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  section {
-    border: 1px solid red;
-    background-color: red;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    top: -50px;
-  }
-  img {
-    border-radius: 50%;
-    width: 200px;
-    height: 200px;
-    position: absolute;
-    top: -10%;
-  }
+  align-items: center;
 }
 
 .personal {
