--- a/components/ProfileImg/profileimg.module.scss
+++ b/components/ProfileImg/profileimg.module.scss
@@ -1,9 +1,18 @@
 .image {
-  transition: all .5s;
+  transition: all 0.5s;
+  position: absolute;
+  top: -10%;
 
   &:hover {
     opacity: 0.9;
     cursor: pointer;
+  }
+
+  img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    border: 0.5px solid black;
   }
 }
 
