--- a/components/Information/Information.module.scss
+++ b/components/Information/Information.module.scss
@@ -2,10 +2,11 @@
   border: 1px solid black;
   display: grid;
   width: 80%;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 3fr;
   grid-template-rows: 1fr 2fr;
   min-height: calc(100vh - 60px - 200px);
   margin: 100px 0 100px 0;
+
   div {
     border: 1px solid black;
   }
@@ -16,10 +17,5 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  align-items: center;
-}
-
-.personal {
-  display: flex;
-  justify-content: space-around;
+  justify-content: start;
 }
