--- a/components/ProfileImg/profileimg.module.scss
+++ b/components/ProfileImg/profileimg.module.scss
@@ -1,7 +1,9 @@
 .image {
   transition: all 0.5s;
-  position: absolute;
-  top: -10%;
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 180px;
 
   &:hover {
     opacity: 0.9;
@@ -13,6 +15,11 @@
     width: 200px;
     height: 200px;
     border: 0.5px solid black;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -20%;
+    margin: auto;
   }
 }
 
