--- a/components/AboutUser/AboutUser.module.scss
+++ b/components/AboutUser/AboutUser.module.scss
@@ -31,7 +31,7 @@
 
 .change {
   padding: 5px;
-  height: 30%;
+  min-height: 30%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -60,5 +60,9 @@
     font-size: 0.7rem;
     font-weight: 600;
     cursor: pointer;
+  }
+
+  .error {
+    border: 1px solid red;
   }
 }
