--- a/components/AboutUser/AboutUser.module.scss
+++ b/components/AboutUser/AboutUser.module.scss
@@ -43,6 +43,10 @@
     border: 1px solid black;
     padding: 2px;
     margin: 3px 0 3px 0;
+
+    &.error {
+      border: 1px solid red;
+    }
   }
 
   label {
@@ -61,8 +65,8 @@
     font-weight: 600;
     cursor: pointer;
   }
+}
 
-  .error {
-    border: 1px solid red;
-  }
+.error {
+  color: red;
 }
