--- a/components/Information/Information.module.scss
+++ b/components/Information/Information.module.scss
@@ -3,7 +3,7 @@
   display: grid;
   width: 80%;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: 1fr 3fr;
   min-height: calc(100vh - 60px - 200px);
   margin: 100px 0 100px 0;
 
@@ -13,9 +13,36 @@
 }
 
 .side {
-  grid-row: 1/3;
+  grid-row: 1/4;
   display: flex;
   flex-direction: column;
   position: relative;
   justify-content: start;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  height: 70px;
+
+  ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    margin-bottom: 10px;
+    width: 15%;
+    justify-content: space-around;
+  }
+
+  li {
+    padding: 5px;
+
+    &:hover {
+      border-radius: 4px;
+      background-color: rgb(245, 244, 244);
+      cursor: pointer;
+    }
+  }
 }
