--- a/components/Information/Information.module.scss
+++ b/components/Information/Information.module.scss
@@ -3,7 +3,7 @@
   display: grid;
   width: 80%;
   grid-template-columns: 1fr 3fr;
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 1fr 5fr;
   min-height: calc(100vh - 60px - 200px);
   margin: 100px 0 100px 0;
 
@@ -25,7 +25,6 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  height: 70px;
 
   ul {
     display: flex;
@@ -45,4 +44,8 @@
       cursor: pointer;
     }
   }
+}
+
+.content {
+  grid-row: 2/3;
 }
