--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@300;400;500&display=swap');
 
 .header {
+  position: relative;
   background-color: rgb(255, 255, 255);
   display: flex;
   height: 60px;
@@ -18,12 +19,6 @@
   &.dark {
     background-color: rgb(44, 41, 64);
     color: rgb(255, 255, 255);
-  }
-}
-
-.logo {
-  img {
-    width: 3rem;
   }
 }
 
@@ -87,7 +82,7 @@
 }
 
 .profile {
-  width: 50%;
+  width: 30%;
   height: 100%;
   display: flex;
   justify-content: flex-end;
@@ -95,10 +90,69 @@
 
   ul {
     list-style-type: none;
-    width: 20%;
+    width: 30%;
     height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+  }
+}
+
+.sidebutton {
+  display: none;
+  cursor: pointer;
+}
+
+@media (max-width: 1000px) {
+  .sidebutton {
+    display: block;
+  }
+
+  .header {
+    nav {
+      display: none;
+    }
+
+    &.responsive {
+      z-index: 1;
+      position: fixed;
+      right: 0;
+      height: 100vh;
+      width: 100%;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 0;
+
+      nav {
+        display: block;
+      }
+
+      ul {
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
+
+      li {
+        cursor: pointer;
+      }
+
+      .details {
+        width: 100%;
+        height: fit-content;
+        flex-direction: column;
+        justify-content: center;
+      }
+
+      .profile {
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+    }
   }
 }
